syntax = "proto3";

package serval.translation.v1;

import "google/protobuf/empty.proto";

service TranslationPlatformApi {
    rpc IncrementTranslationEngineCorpusSize(IncrementTranslationEngineCorpusSizeRequest) returns (google.protobuf.Empty);
    rpc InsertPretranslations(stream InsertPretranslationsRequest) returns (google.protobuf.Empty);
}

message IncrementTranslationEngineCorpusSizeRequest {
    string engine_id = 1;
    int32 count = 2;
}

message InsertPretranslationsRequest {
    string engine_id = 1;
    string corpus_id = 2;
    string text_id = 3;
    repeated string refs = 4;
    string translation = 5;
}
